--- a/Html/ManageKPI.html
+++ b/Html/ManageKPI.html
@@ -66,6 +66,24 @@
                     <i class="glyphicon glyphicon-plus"></i>
                 </div>
             </div>
+
+            <div class="panel-body AddDimensionsDiv" style="display: none;">
+                <div style="width:0;height:0;border-left: 30px solid transparent;border-right: 30px solid transparent;     border-bottom: 30px solid lightblue;margin: 0 0 20px 50px;"></div>
+                <div style="margin:-22px 0 -40px 0;text-align:center;border:2px solid lightblue;border-radius:3px;"
+                     class="col-md-2">
+                    <h4>Add Dimensions</h4>
+                    <input style="margin:20px 0  0 0" class="form-control AddDimensionsTagName"
+                           placeholder="Dimension Name" autocomplete="off">
+                    <select style="margin:20px 0  0 0" class="SelectCls AddDimensionsTagType">
+                        <option value="text">text</option>
+                        <option value="number">number</option>
+                        <option value="location">location</option>
+                    </select>
+                    <button style="margin-bottom:20px;" class="BtnSubmit AddDimensionsTagBtn"><i
+                            class="glyphicon glyphicon-plus"></i> Add
+                    </button>
+                </div>
+            </div>
         </div>
 
         <div class="panel-body">
@@ -231,6 +249,8 @@
         </ul>
     </div>
 </div>
+
+
 </body>
 </html>
 
