--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 </div>
 
-<div class="footer">© 2011-2016
+<div class="footer">© 2011-·
     <a href="#">上海伊弗信息科技有限公司</a>
     . All Rights Reserved.
 </div>
