Show Groups with manual kpi

--- a/Html/ManageKPI.html
+++ b/Html/ManageKPI.html
@@ -121,21 +121,21 @@
                 <div class="col-md-5">
                     <div class="input-group">
                             <span class="input-group-addon">
-                                <input type="radio" value="2" name="manualViewType"/>
+                                <input type="radio" value="1" name="manualViewType"/>
                             </span>
                         <input type="text" class="form-control" readonly
-                               value="Partial Public   |   Only selected People can see it."/>
-                        <span class="input-group-addon SMCGroup"></span>
+                               value="Private         　|   Only you can see it."/>
                     </div>
                 </div>
 
                 <div class="col-md-5">
                     <div class="input-group">
                             <span class="input-group-addon">
-                                <input type="radio" value="1" name="manualViewType"/>
+                                <input type="radio" value="2" name="manualViewType"/>
                             </span>
                         <input type="text" class="form-control" readonly
-                               value="Private         　|   Only you can see it."/>
+                               value="Partial Public   |   Only selected People can see it."/>
+                        <span class="input-group-addon SMCGroup"></span>
                     </div>
                 </div>
 
@@ -149,7 +149,16 @@
                         <span class="input-group-addon SMNCGroup"></span>
                     </div>
                 </div>
+            </div>
+        </div>
 
+        <!--Here is the radio.-->
+        <div class="panel-body">
+            <div style="height:100px;border:2px solid lightblue;border-radius:3px;margin:-20px 0 0 15px;overflow-y:auto;"
+                 class="col-md-11">
+                <div class="col-md-1">
+                    <input type="radio" name="ShowGroups" id="1">MM
+                </div>
             </div>
         </div>
 
@@ -248,7 +257,6 @@
         </ul>
     </div>
 </div>
-
 
 
 </body>
