--- a/Html/ManageKPI.html
+++ b/Html/ManageKPI.html
@@ -317,9 +317,7 @@
                     <th>Dimensions</th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr id="ManualPreKPIDimensions">
-                </tr>
+                <tbody id="ManualPreKPIDimensions">
                 </tbody>
             </table>
 
@@ -336,31 +334,7 @@
                     <th>Notification</th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>AdminUI</td>
-                    <td>18:00</td>
-                    <td>Weekly</td>
-                    <td>IT</td>
-                    <td><i class="glyphicon glyphicon-ok" style="color: green;"></i></td>
-                </tr>
-
-                <tr>
-                    <td>AdminUI</td>
-                    <td>18:00</td>
-                    <td>Weekly</td>
-                    <td>IT</td>
-                    <td><i class="glyphicon glyphicon-ok" style="color: green;"></i></td>
-                </tr>
-
-                <tr>
-                    <td>AdminUI</td>
-                    <td>18:00</td>
-                    <td>Weekly</td>
-                    <td>IT</td>
-                    <td><i class="glyphicon glyphicon-ok" style="color: green;"></i></td>
-                </tr>
-
+                <tbody id="ManualPreKPIAssignTo">
                 </tbody>
             </table>
 
@@ -369,18 +343,20 @@
                 <tr>
                     <th>Viewable</th>
                 </tr>
+                <tr>
+                    <th>Type</th>
+                    <th>Remark</th>
+                </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>Public</td>
-                    <td> Everyone can see it.</td>
+                <tr id="ManualPreKPIViewable">
                 </tr>
                 </tbody>
             </table>
 
             <div class="modal-footer">
                 <button type="button" class="BtnSubmit" data-dismiss="modal">Close</button>
-                <button type="button" class="ManualAssginBtn BtnSubmit">Confirm</button>
+                <button type="button" class="ManualPreKPIConfirm BtnSubmit">Confirm</button>
             </div>
         </div>
     </div>
