--- a/Html/KPIManagement.html
+++ b/Html/KPIManagement.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/KPIManagement.css">
     <link rel="stylesheet" href="../css/managekpi.css"/>
+    <link rel="stylesheet" href="../css/followkpi.css"/>
 
     <script src="../js/basic/jquery-latest.js"></script>
     <script src="../js/basic/jquery.cookie.js"></script>
